# hacakthon_osint

./: README.md  api_server.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ApiKeyModal.jsx  DatasetExplorer.jsx
src/: llm_client.py
src/agent/: executor.py  react_loop.py
src/tools/: __init__.py  firecrawl_scraper.py  web_search.py
