[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-investigative-agent"
version = "1.0.0"
description = "Explainable OSINT Investigative Agent with evidence ledger, autonomous planning, and contradiction detection"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.0",
    "networkx>=3.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "firecrawl-py>=1.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "google-generativeai>=0.8.0",
    "trafilatura>=1.6",
    "numpy>=1.24",
    "duckduckgo_search>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
osint-agent = "src.ui.app:main"

[tool.vercel]
entrypoint = "api_server:app"
